# serializer version: 1
# name: test_feature_spec_version_deterministic
  'bc9333bf07c03fcc1c61d8a9132c38be5666a723420d3b3fcb29d2938a2ad623'
# ---
# name: test_feature_spec_version_includes_all_properties
  '9875e278d1f0bc25055dba0b0d3d26a34882533acca04790cf0a66f370311711'
# ---
# name: test_feature_spec_version_recorded_in_metadata_store
  dict({
    'feature_key': 'recorded/feature',
    'feature_spec_version': 'c7aaa45cd7572ede2de8fce48174cd809e6b653d089f125119fe615f62df35d0',
    'feature_version': '0c7b2d83252fbf2f689bec7d37c4f7ffb103755d11eafabc1e000a372f415d83',
    'snapshot_version': '14d4294da40f4ab27ca85eb739fffd70e92c92522dbcba995cfa2aa343988bf3',
  })
# ---
# name: test_feature_spec_version_stored_in_snapshot
  dict({
    'feature_class_path': 'tests.test_spec_version.SnapshotFeature',
    'feature_spec': dict({
      'code_version': 2,
      'deps': None,
      'fields': list([
        dict({
          'code_version': 1,
          'deps': '__METAXY_ALL_DEP__',
          'key': list([
            'data',
          ]),
        }),
      ]),
      'id_columns': list([
        'sample_uid',
      ]),
      'key': list([
        'snapshot',
        'test',
      ]),
      'metadata': None,
    }),
    'feature_spec_version': '311135ad0e9748a8cae4beaa792488ac44a8b008aba3e694ec5e74dd4fa36662',
    'feature_version': '7cfde77960e3cf10327e9cb97f311418b101fc5ee2c146922a997306e318edaf',
  })
# ---
# name: test_feature_spec_version_with_column_selection_and_rename
  '8533fc5fef2cba54ae276be96da97123d69a148de5790b17c1dd763d6ae49097'
# ---
# name: test_feature_spec_version_with_multiple_complex_deps
  'a78c3b5b59d2e940b795fb46f07a7752332c7466a7463eaa6569a362fae94435'
# ---
